# P2P-VPN

./: Cargo.toml  release.yml
.github/workflows/: release.yml
P2P-Vpn/: README.txt  install.ps1  install.sh  p2p-vpn
src/: main.rs  updater.rs
