[package]
name = "p2p-vpn"
version = "2.4.4"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tun = "0.7"
ring = "0.17"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
ctrlc = "3"
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
dirs = "5"
self_update = "0.41"
flate2 = "1"
tar = "0.4"
ureq = { version = "2", features = ["gzip"] }
tempfile = "3"